--- a/views/html/index.html
+++ b/views/html/index.html
@@ -10,13 +10,13 @@
 
 <body>
   <div id="page-wrapper">
-  <h1>Pauliceia 2.0</h1>
+  <h1>Pauliceia 2.0 - Search Page</h1>
 
   <label for="ajax">Search: </label>
   <input type="text" id="ajax" list="json-datalist" placeholder="">
   <datalist id="json-datalist"></datalist>
     <label for="1"> </label>
-    <div><button id="button_search" type="submit" onclick="location.href='http://localhost:3000/api/geolocation/'+document.getElementById('ajax').value+'/json';">Submit Web</button&nbsp&nbsp&nbsp&nbsp><button id="button_search2" type="submit2" onclick="CallURL();">Submit OpenStreet</button></div>
+    <div><button id="button_search" type="submit" onclick="location.href='http://localhost:3000/api/geolocation/'+document.getElementById('ajax').value+'/json';">Search Web Service</button&nbsp&nbsp&nbsp&nbsp><button id="button_search2" type="submit2" onclick="CallURL();">Use Web Service</button></div>
 </div>
   
     <script src="js/index.js"></script>
