--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
     div.pledged(style="width:100%")
       img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/header.png" alt="Image Title")
   body
-    h1 APIs Especificações
+    h1 Especificação das APIs 
     | As APIs REST vão prover acesso, para leitura, dos dados geográficos do projeto Pauliceia. Segue abaixo a lista de rotas que o projeto 
     br
     | possui, cada uma das rotas para acesso aos dados possui três formatos para leitura dos dados, JSON, GeoJSON e XML. O formato 
@@ -57,7 +57,7 @@ block content
     br
     a(href='javascript:myFunction();') > SearchPage
     br
-    h1 Exemplo de Chamadas:
+    h1 Exemplo de Uso:
     | Segue os exemplos de chamada e de resposta, a função selecionada foi a 'getGeolocationJson', no exemplo foi inserido o endereço  
     br
     | 'rua dos gusmoes, 86, 1931' a primeiro item é o nome da rua 'rua dos gusmoes', o segundo é o numero do local '86' e o último dado 
@@ -65,7 +65,7 @@ block content
     | é o ano que você deseja saber se o local existe '1931'. A respota dessa função se encontra em JSON.
     div
       div
-            h1 Exemplo de Get:
+            h1 Exemplo de Chamada:
             table(width='650', cellpadding='2', cellspacing='0')
               col(width='650')
               tr
@@ -76,7 +76,7 @@ block content
               
     h1 Exemplo Resposta:
     img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/Code.png" alt="Image Title")
-    h1 APIs
+    h1 Informações e Parametros
     | Abaixo pode ser visto uma lista de tabelas, cada uma delas representa uma das rotas para acesso dos dados no sistema. As tabelas
     br
     | são compostas por nome da função, URL da mesma, formato de saida dos dados, descrição da função e os parâmetros da mesma.
