--- a/views/html/css/style.css
+++ b/views/html/css/style.css
@@ -14,12 +14,28 @@ html {
   width: 640px;
   background: #FFFFFF;
   padding: 1em;
-  margin: 14em auto;
+  margin: 5em auto;
   box-shadow: 0 2px 10px rgba(0,0,0,0.8);
+}
+
+#frente {
+	width: 100%;
+	height: 100%;
+	z-index: 999;
+	position: fixed;
 }
 
 h1 {
   margin-top: 0;
+}
+
+img.bg{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 998;
 }
 
 label {
