--- a/views/html/index.html
+++ b/views/html/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html >
-<head>
-  <meta charset="UTF-8">
+    <head>
+        <meta charset="UTF-8">
   
-  <title>Pauliceia 2.0</title>
+        <title>Pauliceia 2.0</title>
 
-      <link rel="stylesheet" href="css/style.css">
-</head>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div id="frente"> 
+            <div id="page-wrapper">
+                <h1>Search Page</h1>
+                <label for="ajax">Search: </label>
+                <input type="text" id="ajax" list="json-datalist" placeholder="">
+                <datalist id="json-datalist"></datalist>
+                <label for="1"> </label>
+                <div><button id="button_search" type="submit" onclick="location.href='http://localhost:3000/api/geolocation/'+document.getElementById('ajax').value+'/json';">Search Web Service</button&nbsp&nbsp&nbsp&nbsp><button id="button_search2" type="submit2" onclick="CallURL();">Use Web Service</button></div></div>
+                    
+                <script src="js/index.js"></script>
+        </div>
+        
+        <div id="fundo">
+                <img class="bg" src="img/01_HOME.jpg">     
+        </div>
 
-<body>
-  <div id="page-wrapper">
-  <h1>Pauliceia 2.0 - Search Page</h1>
-
-  <label for="ajax">Search: </label>
-  <input type="text" id="ajax" list="json-datalist" placeholder="">
-  <datalist id="json-datalist"></datalist>
-    <label for="1"> </label>
-    <div><button id="button_search" type="submit" onclick="location.href='http://localhost:3000/api/geolocation/'+document.getElementById('ajax').value+'/json';">Search Web Service</button&nbsp&nbsp&nbsp&nbsp><button id="button_search2" type="submit2" onclick="CallURL();">Use Web Service</button></div>
-</div>
-  
-    <script src="js/index.js"></script>
-    
-</body>
+    </body>
 </html>
