--- a/views/index.jade
+++ b/views/index.jade
@@ -76,10 +76,10 @@ block content
               
     h1 Exemplo Resposta:
     img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/Code.png" alt="Image Title")
-    h1 Informações e Parametros
+    h1 Informações e Parâmetros
     | Abaixo pode ser visto uma lista de tabelas, cada uma delas representa uma das rotas para acesso dos dados no sistema. As tabelas
     br
-    | são compostas por nome da função, URL da mesma, formato de saida dos dados, descrição da função e os parâmetros da mesma.
+    | são compostas por nome da função, URL da mesma, formato de saída dos dados, descrição da função e os parâmetros da mesma.
     br
     br
     table(cellspacing='0', border='0')
