--- a/views/index.jade
+++ b/views/index.jade
@@ -4,9 +4,9 @@ block content
     link(href='/css/style.css', rel='stylesheet')
     script.
         function myFunction() {
-        var strWindowFeatures = "location=ye,scrollbars=yes,status=yes";
-        var URL = "https://rawgit.com/GSansigolo/PauliceiaAPI/master/views/html/index.html";
-        var win = window.open(URL, "_self", strWindowFeatures);
+          var strWindowFeatures = "location=ye,scrollbars=yes,status=yes";
+          var URL = "https://github.com/GSansigolo/PauliceiaAPI/blob/master/views/html/index-page/index.html";
+          var win = window.open(URL, "_self", strWindowFeatures);
         }
     div.pledged(style="width:100%")
       img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/header.png" alt="Image Title")
