--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
     script.
         function myFunction() {
           var strWindowFeatures = "location=ye,scrollbars=yes,status=yes";
-          var URL = "https://github.com/GSansigolo/PauliceiaAPI/blob/master/views/html/index-page/index.html";
+          var URL = "https://rawgit.com/GSansigolo/PauliceiaAPI/master/views/html/index-page/index.html";
           var win = window.open(URL, "_self", strWindowFeatures);
         }
     div.pledged(style="width:100%")
