--- a/views/html/map-page/map.html
+++ b/views/html/map-page/map.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html >
     <head>
+        <link rel="stylesheet" href="https://openlayers.org/en/v4.3.3/css/ol.css" type="text/css">
+        <style>
+            .map {
+                height: 500px;
+                width: 100%;
+                }
+        </style>
         <meta charset="UTF-8">
         <title>Map View</title>
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://openlayers.org/en/v4.3.3/build/ol.js" type="text/javascript"></script>
     </head>
-    <body>
+    <body onload="onload();">
 
         <div id="frente">         
-                <script src="js/index.js"></script>
                 <div id="page-wrapper">
-                    <div scr=mapa();>Mapa</div>
+                    <div id="map" class="map"></div>
+                    <script type="text/javascript">
+                      var map = new ol.Map({
+                        target: 'map',
+                        layers: [
+                          new ol.layer.Tile({
+                            source: new ol.source.OSM()
+                          })
+                        ],
+                        view: new ol.View({
+                          center: ol.proj.fromLonLat([37.41, 8.82]),
+                          zoom: 4
+                        })
+                      });
+                    </script>
             </div>
         </div>
-        <div id="map" class="smallmap"></div>
         <div id="fundo">
                 <img class="bg" src="img/01_HOME.jpg">     
         </div>
