--- a/views/index.jade
+++ b/views/index.jade
@@ -8,8 +8,9 @@ block content
           var URL = "https://rawgit.com/GSansigolo/PauliceiaAPI/master/views/html/index-page/index.html";
           var win = window.open(URL, "_self", strWindowFeatures);
         }
-    div.pledged(style="width:100%")
-      img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/header.png" alt="Image Title")
+    div.pledged(style="width:100%; border: 2px solid black; padding: 8px;")
+      h1 Pauliceia 2.0: Documentação do Desenvolvedor 
+      //img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/header.png" alt="Image Title")
   body
     h1 Especificação das APIs 
     | As APIs REST vão prover acesso, para leitura, dos dados geográficos do projeto Pauliceia. Segue abaixo a lista de rotas que o projeto 
