--- a/views/html/map-page/map.html
+++ b/views/html/map-page/map.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html >
     <head>
-        <script src="js/map.js"></script>
-        <script src="js/OpenLayers.js"></script>
         <link rel="stylesheet" href="https://openlayers.org/en/v4.3.3/css/ol.css" type="text/css">
         <style>
             .map {
@@ -20,10 +18,34 @@
         <div id="frente">         
                 <div id="page-wrapper">
                     <div id="map" class="map"></div>
+                    <script type="text/javascript">
+                      var map = new ol.Map({
+                        target: 'map',
+                        layers: [
+                          new ol.layer.Tile({
+                            source: new ol.source.OSM()
+                          })
+                        ],
+                        view: new ol.View({
+                          center: ol.proj.fromLonLat([37.41, 8.82]),
+                          zoom: 4
+                        })
+                      });
+
+                    function onload(){
+                        var url = (localStorage.getItem("storageURL"));
+                        var request = new XMLHttpRequest();
+                        request.open('GET', url, true);
+                        request.send();
+
+                        alert("onload");
+                    }
+                    </script>
             </div>
         </div>
         <div id="fundo">
                 <img class="bg" src="img/01_HOME.jpg">     
         </div>
+        <script src="js/OpenLayers.js"></script>
     </body>
 </html>
