--- a/views/html/map-page/map.html
+++ b/views/html/map-page/map.html
@@ -14,12 +14,12 @@
         <script src="https://openlayers.org/en/v4.3.3/build/ol.js" type="text/javascript"></script>
     </head>
     <body onload="onload();">
-
         <div id="frente">         
                 <div id="page-wrapper">
                     <div id="map" class="map"></div>
                     <script type="text/javascript">
                       var lonlat = (localStorage.getItem("lonlat"));
+                      alert(lonlat);
                       var map = new ol.Map({
                         target: 'map',
                         layers: [
