--- a/views/html/map-page/map.html
+++ b/views/html/map-page/map.html
@@ -2,6 +2,8 @@
 <html >
     <head>
         <link rel="stylesheet" href="https://openlayers.org/en/v4.3.3/css/ol.css" type="text/css">
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.8.10/themes/smoothness/jquery-ui.css" type="text/css">
+        <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.8.10/jquery-ui.min.js"></script>        
         <style>
             .map {
                 height: 500px;
