--- a/views/html/map-page/map.html
+++ b/views/html/map-page/map.html
@@ -19,20 +19,26 @@
                       var fields = lonlat.split(' ');
                       var lon = fields[0];
                       var lat = fields[1];
-                      
-                      var 
+                        
+                        console.log(lat, lon);
+                        
+                        var newCoordLon = ol.proj.transform([lon], 'EPSG:4326', 'EPSG:3857');
+                        var newCoordLat = ol.proj.transform([lat], 'EPSG:4326', 'EPSG:3857');
+
+                        console.log(newCoordLat, newCoordLon);
+
+                        var 
                           vectorSource = new ol.source.Vector(),
                           vectorLayer = new ol.layer.Vector({source: vectorSource}),
                           olview = new ol.View({
-                              center: ol.proj.transform([lat, lon], 'EPSG:3857', 'EPSG:4326'),
-                              zoom: 4
+                              center: ([newCoordLon[0], newCoordLat[0]]),
+                              zoom: 6
                           }),
                       map = new ol.Map({
                           target: document.getElementById('map'),
                           view: olview,
                           layers: [
                               new ol.layer.Tile({
-                                  //source: new ol.source.MapQuest({ layer: 'osm' })
                                   source: new ol.source.OSM()
                               }), vectorLayer
                           ]
@@ -48,7 +54,7 @@
                       })
                       });
                       var feature = new ol.Feature({
-                        geometry: new ol.geom.Point([ol.proj.transform([lon,lat], 'EPSG:3857', 'EPSG:4326')])
+                        geometry: new ol.geom.Point([newCoordLon[0], newCoordLat[0]])
                       });
 
                       feature.setStyle(iconStyle);
