--- a/views/html/index-page/index.html
+++ b/views/html/index-page/index.html
@@ -15,7 +15,7 @@
                 <input type="text" id="ajax" list="json-datalist" placeholder="">
                 <datalist id="json-datalist"></datalist>
                 <label for="1"> </label>
-                <div><button id="button_search" type="submit" onclick="location.href='http://localhost:3000/api/geolocation/'+document.getElementById('ajax').value+'/json';">Search Web Service</button&nbsp&nbsp&nbsp&nbsp><button id="button_search2" type="submit2" onclick="CallURL();">Use Web Service</button></div></div>
+                <div><button id="button_search" type="submit" onclick="location.href='http://localhost:3000/api/geolocation/'+document.getElementById('ajax').value+'/json';">Search in Web Service</button&nbsp&nbsp&nbsp&nbsp><button id="button_search2" type="submit2" onclick="CallURL();">View on OpenLayers</button></div></div>
                     
                 <script src="js/index.js"></script>
         </div>
