--- a/views/html/index-page/map.html
+++ b/views/html/index-page/map.html
@@ -6,7 +6,7 @@
         <script src="js/onload.js"></script>
         <meta charset="UTF-8">
         <title>Map View</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style2.css">
         <script src="https://openlayers.org/en/v4.3.3/build/ol.js" type="text/javascript"></script>
     </head>
     <body onload="onload();">
@@ -49,7 +49,7 @@
                           anchor: [0.5, 46],
                           anchorXUnits: 'fraction',
                           anchorYUnits: 'pixels',
-                          opacity: 0.75,
+                          opacity: 0.93,
                           src: 'img/icon.png'
                       })
                       });
