--- a/views/html/index-page/map.html
+++ b/views/html/index-page/map.html
@@ -20,28 +20,46 @@
                       var lon = fields[0];
                       var lat = fields[1];
                         
-                        console.log(lat, lon);
+                        //console.log(lat, lon);
                         
-                        var newCoordLon = ol.proj.transform([lon], 'EPSG:4326', 'EPSG:3857');
-                        var newCoordLat = ol.proj.transform([lat], 'EPSG:4326', 'EPSG:3857');
+                        //var newCoordLon = ol.proj.transform([lon], 'EPSG:4326', 'EPSG:3857');
+                        //var newCoordLat = ol.proj.transform([lat], 'EPSG:4326', 'EPSG:3857');
 
-                        console.log(newCoordLat, newCoordLon);
+                        console.log(lat, lon);
 
                         var 
                           vectorSource = new ol.source.Vector(),
                           vectorLayer = new ol.layer.Vector({source: vectorSource}),
+                          osm = new ol.layer.Tile({
+                                  source: new ol.source.OSM()
+                              }),
+                          sara = new ol.layer.Tile({
+                                source: new ol.source.TileWMS({
+                                    url: 'http://www.terrama2.dpi.inpe.br/geoserver/ows',
+                                    params: {'LAYERS': 'pauliceia:saraBrasil', 'TILED': true},
+                                    serverType: 'geoserver'
+                                }),
+                                visible: true,
+                                name: 'sara'
+                            }),
+                            street = new ol.layer.Tile({
+                                source: new ol.source.TileWMS({
+                                    url: 'http://www.terrama2.dpi.inpe.br/geoserver/ows',
+                                    params: {'LAYERS': 'pauliceia:tb_street', 'TILED': true},
+                                    serverType: 'geoserver'
+                                }),
+                                visible: true,
+                                name: 'tb_street'
+                            }),
                           olview = new ol.View({
-                              center: ([newCoordLon[0], newCoordLat[0]]),
-                              zoom: 6
+                              center: [-46.63665134071729, -23.543103484961193],
+                              projection: 'EPSG:4326',
+                              zoom: 17
                           }),
                       map = new ol.Map({
                           target: document.getElementById('map'),
                           view: olview,
-                          layers: [
-                              new ol.layer.Tile({
-                                  source: new ol.source.OSM()
-                              }), vectorLayer
-                          ]
+                          layers: [osm,sara,vectorLayer],
                       });
 
                       var iconStyle = new ol.style.Style({
@@ -54,7 +72,7 @@
                       })
                       });
                       var feature = new ol.Feature({
-                        geometry: new ol.geom.Point([newCoordLon[0], newCoordLat[0]])
+                        geometry: new ol.geom.Point([lon, lat])
                       });
 
                       feature.setStyle(iconStyle);
