--- a/views/index.jade
+++ b/views/index.jade
@@ -49,7 +49,7 @@ block content
     br
     a(href='http://localhost:3000/api/listQuickSearch') > getListQuickSearchJson
     br
-    a(href='http://localhost:3000/api/geolocation/rua monsenhor andrade, 120, 1931/json') > getGeolocationJson
+    a(href='http://localhost:3000/api/geolocation/rua barra funda, 14, 1913/json') > getGeolocationJson
     br
     br
     h1 Exemplo de Uso:
