--- a/views/html/index-page/map.html
+++ b/views/html/index-page/map.html
@@ -62,7 +62,7 @@
                       map = new ol.Map({
                           target: document.getElementById('map'),
                           view: olview,
-                          layers: [osm,sara,vectorLayer],
+                          layers: [osm, sara, street, vectorLayer],
                       });
 
                       var iconStyle = new ol.style.Style({
