--- a/views/html/index-page/index.html
+++ b/views/html/index-page/index.html
@@ -15,9 +15,15 @@
 
                 <div style="width: 95%; float:left; margin-left: 2%;">
                     <div id="a" style="width: 80%; height: 100%; float:left;"><input type="text" id="ajax" list="json-datalist" placeholder=""></div>
-                    <div id="b" style="width: 20%; height: 100%; float:right;"><button2 id="button_upload" type="submit" onclick="">Upload</button2></div>
-                </div><br><br>
-                
+                    <div id="b" style="width: 20%; height: 100%; float:right;">
+                            
+                        <input type="file" class="file" id="attachement" name="attachement" style="display: none;" onchange="fileSelected(this)"/>
+                                
+                        <button2 id="btnAttachment" type="button" onclick="openAttachment()">Upload</button2>
+                    </div>
+                </div>
+                <br>
+                <br>
                 
                 <datalist id="json-datalist"></datalist>
                 <label for="1"> </label>
