--- a/views/index.jade
+++ b/views/index.jade
@@ -51,6 +51,8 @@ block content
     br
     a(href='http://localhost:3000/api/geolocation/rua barra funda, 14, 1917/json') > getGeolocationJson
     br
+    a(href='http://localhost:3000/api/multiplegeolocation/[ { "adress": "rua barra funda, 33, 1917" }, { "adress": "rua quinze de novembro, 38, 1900" }, { "adress": "rua quinze de novembro, 38, 1901" }, { "adress": "rua quinze de novembro, 38, 1902" }, { "adress": "rua quinze de novembro, 38, 1903" }, { "adress": "rua quinze de novembro, 38, 1904" }, { "adress": "rua quinze de novembro, 38, 1905" }, { "adress": "rua quinze de novembro, 38, 1906" }, { "adress": "rua quinze de novembro, 38, 1907" }, { "adress": "rua quinze de novembro, 38, 1908" }, { "adress": "rua quinze de novembro, 38, 1909" }, { "adress": "rua quinze de novembro, 38, 1910" }, { "adress": "rua quinze de novembro, 38, 1911" }, { "adress": "rua quinze de novembro, 58, 1900" }]/json') > getMultiplegeolocationJson
+    br
     br
     h1 Exemplo de Uso:
     | Segue os exemplos de chamada e de resposta, a função selecionada foi a 'getGeolocationJson', no exemplo foi inserido o endereço  
