--- a/views/html/index-page/index.html
+++ b/views/html/index-page/index.html
@@ -19,7 +19,7 @@
                             
                         <input type="file" class="file" id="attachement" name="attachement" style="display: none;" onchange="fileSelected(this)"/>
                                 
-                        <button2 id="btnAttachment" type="button" onclick="openAttachment()">Upload</button2>
+                        <button2 id="btnAttachment" type="button" onclick="openAttachment();">Upload</button2>
                     </div>
                 </div>
                 <br>
@@ -27,7 +27,7 @@
                 
                 <datalist id="json-datalist"></datalist>
                 <label for="1"> </label>
-                <div><button id="button_search" type="submit" onclick="location.href='http://localhost:3000/api/geolocation/'+document.getElementById('ajax').value+'/json';">Search in Web Service</button&nbsp&nbsp&nbsp&nbsp><button id="button_search2" type="submit2" onclick="CallURL();">View on OpenLayers</button></div></div>
+                <div><button id="button_search" type="submit" onclick="serchinservice();">Search in Web Service</button&nbsp&nbsp&nbsp&nbsp><button id="button_search2" type="submit2" onclick="CallURL();">View on OpenLayers</button></div></div>
                     
                 <script src="js/index.js"></script>
         </div>
