--- a/views/index.jade
+++ b/views/index.jade
@@ -69,7 +69,7 @@ block content
                 td(width='650', valign='top', style='border: 1px solid #000000; padding: 0.1cm')
                     cite
                       font(size='2', style='font-size: 12pt')
-                          | GET www.website.com/api/Geolocation/rua%20dos%20gusmoes,%2086,%201931/Json
+                          | GET ~/api/geolocation/rua quinze de novembro, 17, 1890/json
               
     h1 Exemplo Resposta:
     img.className#IdName(src="https://raw.githubusercontent.com/GSansigolo/PauliceiaAPI/master/views/img/Code.png" alt="Image Title")
